force-app/main/default/objects/KPI_Scheme__c/KPI_Scheme__c.object-meta.xml
<CustomObject>
    <label>KPI Scheme</label>
    <nameField>
        <displayFormat>KS-{0000}</displayFormat>
        <label>KPI Scheme Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Scheme</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>