force-app/main/default/objects/KPI_Scheme__c/fields/Range_To__c.field-meta.xml
<CustomField>
    <fullName>Range_To__c</fullName>
    <label>Range(To)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>