force-app/main/default/objects/KPI_Scheme__c/fields/RangeFrom__c.field-meta.xml
<CustomField>
    <fullName>RangeFrom__c</fullName>
    <label>Range(From)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>