force-app/main/default/objects/KPI_Scheme__c/fields/Scheme_Code__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Code__c</fullName>
    <displayFormat>SC-{0000}</displayFormat>
    <label>Scheme Code</label>
    <type>AutoNumber</type>
</CustomField>