force-app/main/default/objects/KPI_Scheme__c/fields/Type_of_revenue__c.field-meta.xml
<CustomField>
    <fullName>Type_of_revenue__c</fullName>
    <label>Type of revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>