force-app/main/default/objects/KPI_Scheme__c/fields/Type_of_role__c.field-meta.xml
<CustomField>
    <fullName>Type_of_role__c</fullName>
    <label>Type of role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bike commission scheme</fullName>
            </value>
            <value>
                <fullName>Service sales commission scheme</fullName>
            </value>
            <value>
                <fullName>PCA sales commission scheme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>